# ATSPI-MCP-Server

./: Cargo.toml  readme.md  setupClaude.sh
src/: lib.rs  main.rs
