[package]
name = "atspi_mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
atspi = "0.28.0"
rmcp = { version = "0.6", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# For typed tool params / structured outputs (optional but handy)
serde = { version = "1", features = ["derive"] }
schemars = "1"
serde_json = "1"
